<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/name"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/name_text"
            android:layout_marginTop="@dimen/layout_margin"
            style="@style/nameStyle"/>
    <EditText
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_nickname"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            style="@style/nameStyle"
            android:id="@+id/editText"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/editText"
            android:id="@+id/nickname_text"
            style="@style/nameStyle"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nickname_text"
            android:id="@+id/done_button" android:background="@android:color/holo_green_light"/>
    <ImageView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/done_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/star_image"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
        <TextView
                android:text="@string/bio"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bio"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent"

                style="@style/nameStyle"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>